feature columns, batch and epochs

--- a/notes_titanic.ipynb
+++ b/notes_titanic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,13 +226,96 @@
        "max     80.000000            8.000000    5.000000  512.329200"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dftrain.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature columns\n",
+    "There are two kinds of columns: numeric and categorical.  \n",
+    "Categorical data is anything that is not numeric.  \n",
+    "Before training the model, we need to replace categorical data by numeric data.  \n",
+    "Tensorflow can do this automatically.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names are ['sex', 'age', 'n_siblings_spouses', 'parch', 'fare', 'class', 'deck', 'embark_town', 'alone']\n",
+      "Categorical columns are ['sex', 'n_siblings_spouses', 'parch', 'class', 'deck', 'embark_town', 'alone']\n",
+      "Numeric columns are ['age', 'fare']\n",
+      "  \n",
+      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:21: categorical_column_with_vocabulary_list (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n",
+      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:24: numeric_column (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n",
+      " \n",
+      "[VocabularyListCategoricalColumn(key='sex', vocabulary_list=('male', 'female'), dtype=tf.string, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='n_siblings_spouses', vocabulary_list=(1, 0, 3, 4, 2, 5, 8), dtype=tf.int64, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='parch', vocabulary_list=(0, 1, 2, 5, 3, 4), dtype=tf.int64, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='class', vocabulary_list=('Third', 'First', 'Second'), dtype=tf.string, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='deck', vocabulary_list=('unknown', 'C', 'G', 'A', 'B', 'D', 'F', 'E'), dtype=tf.string, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='embark_town', vocabulary_list=('Southampton', 'Cherbourg', 'Queenstown', 'unknown'), dtype=tf.string, default_value=-1, num_oov_buckets=0), VocabularyListCategoricalColumn(key='alone', vocabulary_list=('n', 'y'), dtype=tf.string, default_value=-1, num_oov_buckets=0), NumericColumn(key='age', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None), NumericColumn(key='fare', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "CATEGORICAL_COLUMNS = list(dftrain.columns)\n",
+    "print(\"Column names are %s\" % CATEGORICAL_COLUMNS)\n",
+    "# If i use [] instead of list() to create list, it gives:\n",
+    "# CATEGORICAL_COLUMNS = [dftrain.columns]\n",
+    "# [Index(['sex', 'age', 'n_siblings_spouses', 'parch', 'fare', 'class', 'deck',\n",
+    "#         'embark_town', 'alone'],\n",
+    "#        dtype='object')]\n",
+    "\n",
+    "NUMERIC_COLUMNS = []\n",
+    "NUMERIC_COLUMNS.append(CATEGORICAL_COLUMNS.pop(CATEGORICAL_COLUMNS.index('age'))) # delete \"age\" from CATEGORICAL_COLUMNS and add to NUMERIC_COLUMNS\n",
+    "NUMERIC_COLUMNS.append(CATEGORICAL_COLUMNS.pop(CATEGORICAL_COLUMNS.index('fare')))\n",
+    "print(\"Categorical columns are %s\" % CATEGORICAL_COLUMNS)\n",
+    "print(\"Numeric columns are %s\" % NUMERIC_COLUMNS)\n",
+    "print(\"  \")\n",
+    "\n",
+    "feature_columns = []\n",
+    "for feature_name in CATEGORICAL_COLUMNS:\n",
+    "    vocabulary = dftrain[feature_name].unique()\n",
+    "    #             ^^^^^^^^^^^^^^^^^^^^           get all rows of the column\n",
+    "    #                                  ^^^^^^^   find unique values\n",
+    "    feature_columns.append(tf.feature_column.categorical_column_with_vocabulary_list(feature_name, vocabulary))\n",
+    "\n",
+    "for feature_name in NUMERIC_COLUMNS:\n",
+    "    feature_columns.append(tf.feature_column.numeric_column(feature_name, dtype=tf.float32))\n",
+    "\n",
+    "print(' ')\n",
+    "print(feature_columns)\n",
+    "\n",
+    "# WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:21: categorical_column_with_vocabulary_list (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+    "# Instructions for updating:\n",
+    "# Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n",
+    "# WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:24: numeric_column (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+    "# Instructions for updating:\n",
+    "# Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batch and epochs\n",
+    "- Batch: number of training examples utilized in one iteration. = how many data we feed to the model once.\n",
+    "- epochs: how many times the model will see the same data. Ex. if we have 10 epochs, then our model will see the same dataset 10 times."
    ]
   }
  ],
