add note linear regression
merci maxime d'avoir parle avec moi. Salon me fait chier.我讨厌那里的一切

--- a/notes_titanic.ipynb
+++ b/notes_titanic.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Core learning algorithms\n",
-    "\n",
+    "This \"chapter\" talks about linear regression.\n",
     "\n"
    ]
   },
@@ -260,10 +260,10 @@
       "Categorical columns are ['sex', 'n_siblings_spouses', 'parch', 'class', 'deck', 'embark_town', 'alone']\n",
       "Numeric columns are ['age', 'fare']\n",
       "  \n",
-      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:21: categorical_column_with_vocabulary_list (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_12080\\3914890335.py:21: categorical_column_with_vocabulary_list (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n",
-      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_3880\\535747530.py:24: numeric_column (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\eziod\\AppData\\Local\\Temp\\ipykernel_12080\\3914890335.py:24: numeric_column (from tensorflow.python.feature_column.feature_column_v2) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use Keras preprocessing layers instead, either directly or via the `tf.keras.utils.FeatureSpace` utility. Each of `tf.feature_column.*` has a functional equivalent in `tf.keras.layers` for feature preprocessing when training a Keras model.\n",
       " \n",
@@ -315,7 +315,198 @@
    "source": [
     "## Batch and epochs\n",
     "- Batch: number of training examples utilized in one iteration. = how many data we feed to the model once.\n",
-    "- epochs: how many times the model will see the same data. Ex. if we have 10 epochs, then our model will see the same dataset 10 times."
+    "- epochs: how many times the model will see the same data. Ex. if we have 10 epochs, then our model will see the same dataset 10 times.\n",
+    "  \n",
+    "## Input function\n",
+    "We need to build an input function to feed the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of ds (input_function) is <class 'function'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_input_fn(data_df, label_df, num_epochs=10, shuffle=True, batch_size=32):\n",
+    "    def input_function():\n",
+    "        ds = tf.data.Dataset.from_tensor_slices((dict(data_df), label_df))\n",
+    "        if shuffle:\n",
+    "            ds = ds.shuffle(1000) # randomize order of data\n",
+    "        ds = ds.batch(batch_size).repeat(num_epochs) # split dataset into batches of 32 and repeat process for number of epochs\n",
+    "        return ds # return a batch of the dataset\n",
+    "    return input_function\n",
+    "\n",
+    "train_input_fn = make_input_fn(dftrain, y_train)\n",
+    "print(\"Type of input_function is %s\" % type(train_input_fn))\n",
+    "eval_input_fn = make_input_fn(dfeval, y_eval, num_epochs=1, shuffle=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of linear_est is <class 'tensorflow_estimator.python.estimator.canned.linear.LinearClassifierV2'> \n",
+      "Type of result is <class 'dict'> \n",
+      "The accuracy is 0.75757575 \n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_est = tf.estimator.LinearClassifier(feature_columns=feature_columns) # i suppose \"est\" stands for estimation\n",
+    "\n",
+    "linear_est.train(train_input_fn) # train\n",
+    "result = linear_est.evaluate(eval_input_fn)\n",
+    "\n",
+    "clear_output()\n",
+    "print(\"Type of linear_est is %s \" % type(linear_est))\n",
+    "print(\"Type of result is %s \" % type(result))\n",
+    "print(\"The accuracy is %s \" % str(result['accuracy'])) # the result variable is simply a dict of stats about our model\n",
+    "\n",
+    "# there is warning message telling me to use tf.keras instead.\n",
+    "\n",
+    "# It takes 4 or 5 seconds to run this chunk of code.\n",
+    "# The accuracy varies each time."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a bit information of the above code.  \n",
+    "`tf.estimator`is to train and evaluate tf models. It is deprecated.  \n",
+    "\n",
+    "Explore the varialbe \"result\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.75757575\n",
+      "accuracy_baseline 0.625\n",
+      "auc 0.8345577\n",
+      "auc_precision_recall 0.7932865\n",
+      "average_loss 0.48431924\n",
+      "label/mean 0.375\n",
+      "loss 0.47795072\n",
+      "precision 0.6576577\n",
+      "prediction/mean 0.42756692\n",
+      "recall 0.7373737\n",
+      "global_step 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "result # is a dict"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict\n",
+    "Still to need to use input function to feed the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dfeval (information about this passenger):\n",
+      "sex                        female\n",
+      "age                          55.0\n",
+      "n_siblings_spouses              0\n",
+      "parch                           0\n",
+      "fare                         16.0\n",
+      "class                      Second\n",
+      "deck                      unknown\n",
+      "embark_town           Southampton\n",
+      "alone                           y\n",
+      "Name: 3, dtype: object\n",
+      "\n",
+      "y_eval (the correct answer):\n",
+      "1\n",
+      "\n",
+      "the result (the probability that this passenger survives):\n",
+      "0.70570225\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = list(linear_est.predict(eval_input_fn))\n",
+    "clear_output()\n",
+    "i = 3\n",
+    "print('dfeval (information about this passenger):')\n",
+    "print(dfeval.loc[i])\n",
+    "print('\\ny_eval (the correct answer):')\n",
+    "print(y_eval.loc[i])\n",
+    "print('\\nthe result (the probability that this passenger survives):')\n",
+    "print(result[i]['probabilities'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "\n",
+      "k v pair:\n",
+      "logits \t\t\t [0.8746014] \t\t\t <class 'numpy.ndarray'>\n",
+      "logistic \t\t\t [0.70570225] \t\t\t <class 'numpy.ndarray'>\n",
+      "probabilities \t\t\t [0.29429775 0.70570225] \t\t\t <class 'numpy.ndarray'>\n",
+      "class_ids \t\t\t [1] \t\t\t <class 'numpy.ndarray'>\n",
+      "classes \t\t\t [b'1'] \t\t\t <class 'numpy.ndarray'>\n",
+      "all_class_ids \t\t\t [0 1] \t\t\t <class 'numpy.ndarray'>\n",
+      "all_classes \t\t\t [b'0' b'1'] \t\t\t <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# i need to explore a bit the new \"result\" variable\n",
+    "i = 3\n",
+    "print(type(result[i])) # dict\n",
+    "print('\\nk v pair:')\n",
+    "for k,v in result[i].items():\n",
+    "    print(k, '\\t\\t\\t', v, '\\t\\t\\t', type(v))"
    ]
   }
  ],
