--- a/notes_2_linearRegression.ipynb
+++ b/notes_2_linearRegression.ipynb
@@ -288,11 +288,13 @@
     "print(\"  \")\n",
     "\n",
     "feature_columns = []\n",
-    "for feature_name in CATEGORICAL_COLUMNS:\n",
+    "for feature_name in CATEGORICAL_COLUMNS: # here feature_name means column name\n",
     "    vocabulary = dftrain[feature_name].unique()\n",
     "    #             ^^^^^^^^^^^^^^^^^^^^           get all rows of the column\n",
     "    #                                  ^^^^^^^   find unique values\n",
     "    feature_columns.append(tf.feature_column.categorical_column_with_vocabulary_list(feature_name, vocabulary))\n",
+    "    #                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "    # here, tf automatically replace catigorical data by numeric data\n",
     "\n",
     "for feature_name in NUMERIC_COLUMNS:\n",
     "    feature_columns.append(tf.feature_column.numeric_column(feature_name, dtype=tf.float32))\n",
